fix: updated specification and category use cases to use database and updated swagger
